fix: resolve horizontal scroll, make width of header, treatment wiev and footer to auto

--- a/src/common/Footer/Footer.css
+++ b/src/common/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footerDesign {
     /* height: 9vh; */
-    width: 100vw;
+    width: auto;
     margin: 0;
     padding: 0;
     background-color: rgba(133, 220, 249, 0.653);
