--- a/src/common/Header/Header.css
+++ b/src/common/Header/Header.css
@@ -1,5 +1,5 @@
 .headerDesign {
-    width: 100vw;
+    width: auto;
     margin: 0;
     padding: 0;
     background-color: rgba(133, 220, 249, 0.653);
@@ -9,14 +9,11 @@
 }
 .mainPart{
     display: flex;
-
 }
+
 .navBarStyle {
-    /* height: 4em; */
     display: flex;
-    /* justify-content: space-evenly; */
     font-size: large;
-    /* text-decoration: none; */
     transition: 0.6s;
 }
 
