--- a/src/pages/Treatment/Treatment.css
+++ b/src/pages/Treatment/Treatment.css
@@ -1,5 +1,5 @@
 .treatmentDesign {
-    width: 100vw;
+    width: auto;
     background-color: rgb(238, 233, 218);
     /* display: grid;
     grid-template-columns: repeat(3, 1fr); */
